--- a/Cviewer/mainwindow.ui
+++ b/Cviewer/mainwindow.ui
@@ -1,24 +1,126 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>419</width>
+    <height>661</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLineEdit" name="lineEditRootPath"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="labelFunctions">
+      <property name="text">
+       <string>Functions in file:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="pushButtonAll">
+        <property name="text">
+         <string>All</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonNone">
+        <property name="text">
+         <string>None</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="3" column="0">
+     <widget class="QListWidget" name="listWidgetFunctions"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QTreeView" name="fileSystemTreeView"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>419</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionPath"/>
+   <addaction name="separator"/>
+   <addaction name="actionLoad_File_Functions"/>
+   <addaction name="actionShowGraph"/>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionPath">
+   <property name="icon">
+    <iconset>
+     <normalon>:/images/images/folder-2x.png</normalon>
+    </iconset>
+   </property>
+   <property name="text">
+    <string>Change Path</string>
+   </property>
+   <property name="toolTip">
+    <string>Change Path</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
+   </property>
+  </action>
+  <action name="actionLoad_File_Functions">
+   <property name="icon">
+    <iconset>
+     <normalon>:/images/images/sort-ascending-2x.png</normalon>
+    </iconset>
+   </property>
+   <property name="text">
+    <string>Load File Functions</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
+   </property>
+  </action>
+  <action name="actionShowGraph">
+   <property name="icon">
+    <iconset>
+     <normalon>:/images/images/eye-2x.png</normalon>
+    </iconset>
+   </property>
+   <property name="text">
+    <string>Show graph</string>
+   </property>
+   <property name="toolTip">
+    <string>Show Graph as PDF</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
+   </property>
+  </action>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
